src/styles/pages/Initiative.scss
.flex-container {
  display: flex;
}

.left-col {
  width: 100%;
}

.right-col {
  width: 100%;

  &.volunteers-container {
    padding: 12px;
    display: flex;
    align-items: center;
    display: block;
  }

  &.announcements-container {
    padding: 12px;
    display: flex;
    align-items: center;
    display: block;
    padding-bottom: 30px;
    margin-bottom: 30px;
  }

  &.events-container {
    padding: 12px;
    display: flex;
    align-items: center;
    display: block;
    padding-bottom: 30px;
    margin-bottom: 30px;
  }
}

